implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -298,6 +298,10 @@
                   error
                   amet
                   numquam iure provident voluptate esse quasi.</p>
+                <div class="badges">
+                  <a class="badge-link" href="#"><img src="/img/svg/google-play-badge.svg" alt=""></a>
+                  <a class="badge-link" href="#"><img src="/img/svg/app-store-badge.svg" alt=""></a>
+                </div>
 
                 <button type="button" class="btn btn-outline-dark waves-effect btn-md ml-lg-0"><i class="fab fa-apple fa-lg pr-1"></i> App Store</button>
                 <button type="button" class="btn btn-outline-dark waves-effect btn-md"><i class="fab fa-google-play fa-lg pr-1"></i> Google Play</button>
