implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -291,18 +291,13 @@
             <div class="row d-flex justify-content-center">
 
               <!-- Grid column -->
-              <div class="col-md-6 p-5 align-self-centers">
+              <div class="col-md-6 p-5">
 
                 <h2 class="h2 mb-4 text-dark">Now Available</h2>
-                <p class="mb-4 dark-grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur veniam. Fugit,
-                  error
-                  amet
-                  numquam iure provident voluptate esse quasi.</p>
+                <p class="mb-4 dark-grey-text">Our app is available on android device! Download now to get started!</p>
 
                 <button type="button" class="btn btn-outline-download waves-effect btn-md ml-lg-0"><i class="fab fa-apple fa-lg pr-1"></i> App Store</button>
                 <button type="button" class="btn btn-outline-download waves-effect btn-md"><i class="fab fa-google-play fa-lg pr-1"></i> Google Play</button>
-
-
 
               </div>
               <!-- Grid column -->
