implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -296,8 +296,8 @@
                 <h2 class="h2 mb-4 text-dark">Now Available</h2>
                 <p class="mb-4 dark-grey-text">Our app is available on android device! Download now to get started!</p>
 
-                <button type="button" class="btn btn-outline-download waves-effect btn-md ml-lg-0"><i class="fab fa-apple fa-lg pr-1"></i> App Store</button>
-                <button type="button" class="btn btn-outline-download waves-effect btn-md"><i class="fab fa-google-play fa-lg pr-1"></i> Google Play</button>
+                <button type="button" class="btn btn-outline-download waves-effect btn-md ml-lg-0 rounded-pill"><i class="fab fa-apple fa-lg pr-1"></i> App Store</button>
+                <button type="button" class="btn btn-outline-download waves-effect btn-md rounded-pill"><i class="fab fa-google-play fa-lg pr-1"></i> Google Play</button>
 
               </div>
               <!-- Grid column -->
