implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -297,19 +297,20 @@
                 <p class="mb-4 dark-grey-text">Our app is available on android device! Download now to get started!</p>
                 <button type="button" class="btn btn-outline-download waves-effect btn-md rounded-pill"><i class="fab fa-google-play fa-lg pr-1"></i> Google Play</button>
 
-                <h3 class="font-weight-bold white-text pb-2">Stay Updated</h3>
-                <p class="lead white-text pt-2 mb-5">Subscribe to our newsletter to be always aware of our new updates.<br>We build powerful and flexible templates for startups.</p>
+                <h2 class="h2 mb-4 text-dark pb-2 py-3">Stay Updated</h3>
+                  <p class="mb-4 dark-grey-text pt-2">Subscribe to our newsletter to be always aware of our new updates.</p>
 
-                <!--Form newsletter-->
-                <form class="col-md-9 input-grey pl-0" action="" method="post" target="_blank">
-                  <div class="input-group mb-3">
-                    <input type="text" class="form-control white-text rgba-white-light border-0 z-depth-0" placeholder="Enter Email Address" aria-label="Enter Email Address" aria-describedby="button-addon2">
-                    <div class="input-group-append">
-                      <button class="btn btn-md btn-mdb-color m-0 px-3 py-2 z-depth-0" type="button" id="button-addon2">Sign up<i class="fas fa-arrow-right pl-2"></i></button>
+                  <!--Form newsletter-->
+                  <form class="col-md-9 input-grey pl-0" action="" method="post" target="_blank">
+                    <div class="input-group mb-3">
+                      <input type="text" class="form-control text-darkt rgba-white-light border-0 z-depth-0" placeholder="Enter Email Address" aria-label="Enter Email Address" aria-describedby="button-addon2">
+                      <div class="input-group-append">
+                        <button class="btn btn-md btn-mdb-color m-0 px-3 py-2 z-depth-0" type="button" id="button-addon2">Sign up<i class="fas fa-arrow-right pl-2"></i></button>
+                      </div>
                     </div>
-                  </div>
-                </form>
-                <!--Form newsletter-->
+                  </form>
+                  <!--Form newsletter-->
+
               </div>
               <!-- Grid column -->
 
