implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -303,7 +303,7 @@
                   <!--Form newsletter-->
                   <form class="col-md-9 input-grey pl-0" action="" method="post" target="_blank">
                     <div class="input-group mb-3">
-                      <input type="text" class="form-control text-darkt rgba-white-light border-0 z-depth-0" placeholder="Enter Email Address" aria-label="Enter Email Address" aria-describedby="button-addon2">
+                      <input type="text" class="form-control text-dark rgba-white-light border-0 z-depth-0" placeholder="Enter Email Address" aria-label="Enter Email Address" aria-describedby="button-addon2">
                       <div class="input-group-append">
                         <button class="btn btn-md btn-mdb-color m-0 px-3 py-2 z-depth-0" type="button" id="button-addon2">Sign up<i class="fas fa-arrow-right pl-2"></i></button>
                       </div>
