--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -301,9 +301,12 @@
                   <p class="mb-4 dark-grey-text pt-2">Subscribe to our newsletter to be always aware of our new updates.</p>
 
                   <!--Form newsletter-->
+                  <h3 class="font-weight-bold text-dark pb-2">Stay Updated</h3>
+                  <p class="lead dark-grey-text pt-2 mb-5">Subscribe to our newsletter to be always aware of our new updates.<br>We build powerful and flexible templates for startups.</p>
+
                   <form class="col-md-9 input-grey pl-0" action="" method="post" target="_blank">
                     <div class="input-group mb-3">
-                      <input type="text" class="form-control white-text rgba-white-light border-0 z-depth-0" placeholder="Enter Email Address" aria-label="Enter Email Address" aria-describedby="button-addon2">
+                      <input type="text" class="form-control dark-grey-text rgba-white-light border-0 z-depth-0" placeholder="Enter Email Address" aria-label="Enter Email Address" aria-describedby="button-addon2">
                       <div class="input-group-append">
                         <button class="btn btn-md btn-mdb-color m-0 px-3 py-2 z-depth-0" type="button" id="button-addon2">Sign up<i class="fas fa-arrow-right pl-2"></i></button>
                       </div>
