--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -298,12 +298,12 @@
                 <button type="button" class="btn btn-outline-download waves-effect btn-md rounded-pill"><i class="fab fa-google-play fa-lg pr-1"></i> Google Play</button>
 
                 <!--Form newsletter-->
-                <h2 class="h2 mb-4 text-dark pb-2 pt-3">Stay Updated</h3>
-                  <p class="mb-4 lead dark-grey-text pt-2">Subscribe to our newsletter to be always aware of our new updates.<br>We build powerful and flexible templates for startups.</p>
+                <h2 class="h2 mb-4 text-dark pb-2 pt-5">Stay Updated</h3>
+                  <p class="mb-4 dark-grey-text pt-2">Subscribe to our newsletter to be always aware of our new updates.</p>
 
                   <form class="col-md-9 input-grey pl-0" action="" method="post" target="_blank">
                     <div class="input-group mb-3">
-                      <input type="text" class="form-control dark-grey-text rgba-white-light border-0 z-depth-0" placeholder="Enter Email Address" aria-label="Enter Email Address" aria-describedby="button-addon2">
+                      <input type="text" class="form-control dark-grey-text border-0 z-depth-0" placeholder="Enter Email Address" aria-label="Enter Email Address" aria-describedby="button-addon2">
                       <div class="input-group-append">
                         <button class="btn btn-md btn-mdb-color m-0 px-3 py-2 z-depth-0 rounded-right" type="button" id="button-addon2">Sign up<i class="fas fa-arrow-right pl-2"></i></button>
                       </div>
