implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -280,7 +280,7 @@
       <!--Game container-->
 
       <!--Download game container-->
-      <div class="container mt-5">
+      <div class="container">
 
         <!--Section: Content-->
         <section class="features" id="features">
