implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -29,6 +29,10 @@
 </head>
 
 <body>
+  <!-- Page Preloader -->
+  <div id="preloader">
+    <div class="loader"></div>
+  </div>
   <!-- Start of project here-->
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
@@ -455,7 +459,7 @@
   <script type="text/javascript" src="/js/jquery-easing.min.js"></script>
   <!-- Custom scripts (optional) -->
   <script type="text/javascript" src="/js/new-age.min.js"></script>
-  <script type="text/javascript" src="/js/carousel-multi.js"></script>
+  <script type="text/javascript" src="/js/yanger.js"></script>
 
 
 </body>
