--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -284,7 +284,7 @@
       <!--Game container-->
 
       <!--Download game container-->
-      <div class="container">
+      <div class="container mt-5">
 
         <!--Section: Content-->
         <section class="features" id="features">
