--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <!--Main Navigation-->
 
   <!--Main layout-->
-  <main class="design px-5">
+  <main class="main-design px-5">
     <!--Main container-->
     <div class="container">
 
