implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -220,47 +220,59 @@
                 </ul>
               </div>
               <!--Game detail column-->
-
-              <!--Grid column-->
-              <div class="col-md-6">
-                <!--Carousel slide-->
-                <div id="carousel-multi" class="carousel slide carousel-multi-item v-2" data-ride="carousel">
-                  <!--Images-->
-                  <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active">
-                      <div class="col-12 col-md-6 mb-4 mx-auto">
-                        <div class="view overlay view rounded z-depth-1-half">
-                          <img src="/img/tpc-screen-pets.jpg" class="img-fluid rounded" alt="screen-pets">
-                          <div class="mask rgba-white-slight"></div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                      <div class="col-12 col-md-6 mb-4 mx-auto">
-                        <div class="view overlay view rounded z-depth-1-half">
-                          <img src="/img/tpc-screen-menu.jpg" class="img-fluid rounded" alt="screen-menu">
-                          <div class="mask rgba-white-slight"></div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                      <div class="col-12 col-md-6 mb-4 mx-auto">
-                        <div class="view overlay view rounded z-depth-1-half">
-                          <img src="/img/tpc-screen-play.jpg" class="img-fluid rounded" alt="screen-play">
-                          <div class="mask rgba-white-slight"></div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <!--Images-->
-                </div>
-                <!--Carousel slide-->
-              </div>
-              <!--Grid column-->
             </div>
             <!--Grid row-->
 
+            <!--Carousel-->
+            <div class="container my-3">
+              <!--Section: Content-->
+              <section class="text-center">
 
+                <!--Grid row-->
+                <div class="row d-flex justify-content-center">
+                  <!--Grid column-->
+                  <div class="col-md-6">
+                    <!--Carousel slide-->
+                    <div id="carousel-multi" class="carousel slide carousel-multi-item v-2" data-ride="carousel">
+                      <!--Images-->
+                      <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                          <div class="col-12 col-md-6 mb-4 mx-auto">
+                            <div class="view overlay view rounded z-depth-1-half">
+                              <img src="/img/tpc-screen-pets.jpg" class="img-fluid rounded" alt="screen-pets">
+                              <div class="mask rgba-white-slight"></div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="carousel-item">
+                          <div class="col-12 col-md-6 mb-4 mx-auto">
+                            <div class="view overlay view rounded z-depth-1-half">
+                              <img src="/img/tpc-screen-menu.jpg" class="img-fluid rounded" alt="screen-menu">
+                              <div class="mask rgba-white-slight"></div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="carousel-item">
+                          <div class="col-12 col-md-6 mb-4 mx-auto">
+                            <div class="view overlay view rounded z-depth-1-half">
+                              <img src="/img/tpc-screen-play.jpg" class="img-fluid rounded" alt="screen-play">
+                              <div class="mask rgba-white-slight"></div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <!--Images-->
+                    </div>
+                    <!--Carousel slide-->
+                  </div>
+                  <!--Grid column-->
+                </div>
+                <!--Grid row-->
+
+              </section>
+              <!--Section: Content-->
+            </div>
+            <!--Carousel-->
           </div>
           <!--Card-->
         </section>
