implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -224,7 +224,7 @@
             <!--Grid row-->
 
             <!--Carousel-->
-            <div class="container my-3">
+            <div class="container">
               <!--Section: Content-->
               <section class="text-center">
 
