--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -224,7 +224,7 @@
             <!--Grid row-->
 
             <!--Carousel-->
-            <div class="container">
+            <div class="container my-3">
               <!--Section: Content-->
               <section class="text-center">
 
@@ -281,7 +281,7 @@
       <!--Game container-->
 
       <!--Download game container-->
-      <div class="container mt-5">
+      <div class="container">
 
         <!--Section: Content-->
         <section class="features" id="features">
