implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -306,7 +306,7 @@
                     <div class="input-group mb-3">
                       <input type="text" class="form-control dark-grey-text border-0 z-depth-0" placeholder="Enter Email Address" aria-label="Enter Email Address" aria-describedby="button-addon2">
                       <div class="input-group-append">
-                        <button class="btn btn-md  m-0 px-3 py-2 z-depth-0 rounded-right" type="button" id="button-addon2">Sign up<i class="fas fa-arrow-right pl-2"></i></button>
+                        <button class="btn btn-md cyan darken-2 m-0 px-3 py-2 z-depth-0 rounded-right" type="button" id="button-addon2">Sign up<i class="fas fa-arrow-right pl-2"></i></button>
                       </div>
                     </div>
                   </form>
