implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -296,7 +296,8 @@
 
                 <h2 class="h2 mb-4 text-dark">Now Available</h2>
                 <p class="mb-4 dark-grey-text">Our app is available on android device! Download now to get started!</p>
-                <a href="https://play.google.com/store/apps/details?id=com.soufunstudio.tpc&hl=en" class="btn btn-outline-download waves-effect btn-md rounded-pill" target="_blank"><i class="fab fa-google-play fa-lg pr-1"></i> Google Play</a>
+                <a href="https://play.google.com/store/apps/details?id=com.soufunstudio.tpc&hl=en" class="btn btn-outline-download waves-effect btn-md rounded-pill" target="_blank">
+                  <i class="fab fa-google-play fa-lg pr-1"></i> Google Play</a>
 
                 <!--Form newsletter-->
                 <h2 class="h2 mb-4 text-dark pb-2 pt-5">Stay Updated</h3>
