implementing tpc.html view

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           <div class="card">
             <!--Card image-->
             <div class="view overlay zoom">
-              <img src="img/xord-icon.jpg" class="img-fluid card-img-top" alt="xord-icon">
+              <img src="img/xord-icon.jpg" class="img-fluid card-img-top rounded-circle" alt="xord-icon">
               <a href="http://xord.soufunstudio.com">
                 <div class="mask rgba-red-light"></div>
               </a>
