implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -239,7 +239,7 @@
                         <div class="carousel-item active">
                           <div class="col-12 col-md-6 mb-4 mx-auto">
                             <div class="view overlay view rounded z-depth-1-half">
-                              <img src="/img/tpc-screen-pets.jpg" class="img-fluid rounded" alt="screen-pets">
+                              <img src="/img/tpc-screen-pets.jpg" class="img-fluid rounded-circle" alt="screen-pets">
                               <div class="mask rgba-white-slight"></div>
                             </div>
                           </div>
@@ -247,7 +247,7 @@
                         <div class="carousel-item">
                           <div class="col-12 col-md-6 mb-4 mx-auto">
                             <div class="view overlay view rounded z-depth-1-half">
-                              <img src="/img/tpc-screen-menu.jpg" class="img-fluid rounded" alt="screen-menu">
+                              <img src="/img/tpc-screen-menu.jpg" class="img-fluid rounded-circle" alt="screen-menu">
                               <div class="mask rgba-white-slight"></div>
                             </div>
                           </div>
@@ -255,7 +255,7 @@
                         <div class="carousel-item">
                           <div class="col-12 col-md-6 mb-4 mx-auto">
                             <div class="view overlay view rounded z-depth-1-half">
-                              <img src="/img/tpc-screen-play.jpg" class="img-fluid rounded" alt="screen-play">
+                              <img src="/img/tpc-screen-play.jpg" class="img-fluid rounded-circle" alt="screen-play">
                               <div class="mask rgba-white-slight"></div>
                             </div>
                           </div>
