--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -223,7 +223,7 @@
             </div>
             <!--Grid row-->
 
-            <!--Carousel-->
+            <!--Carousel game gallery-->
             <div class="container my-3">
               <!--Section: Content-->
               <section class="text-center">
@@ -272,7 +272,7 @@
               </section>
               <!--Section: Content-->
             </div>
-            <!--Carousel-->
+            <!--Carousel game gallery-->
 
             <!-- Grid row -->
             <div class="row d-flex justify-content-center">
@@ -301,7 +301,7 @@
               </div>
               <!-- Grid column -->
 
-              <!--Device column-->
+              <!--Device video column-->
               <div class="col-md-6 p-2">
                 <div class="device-container">
                   <div class="device-mockup iphone6_plus portrait gold">
@@ -316,23 +316,18 @@
                   </div>
                 </div>
               </div>
-              <!--Device column-->
+              <!--Device video column-->
 
             </div>
             <!-- Grid row -->
-
           </div>
           <!--Card-->
         </section>
         <!--Section: Content-->
       </div>
       <!--Game container-->
-
-
-
     </div>
     <!--Main container-->
-
   </main>
   <!--Main layout-->
 
