--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -153,7 +153,7 @@
   <main class="main-design px-5">
 
     <!--Main container-->
-    <div class="container">
+    <div class="container-fluid">
 
       <!--Game container-->
       <div class="container my-5">
