implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -156,7 +156,7 @@
     <div class="container-fluid">
 
       <!--Game container-->
-      <div class="container my-5">
+      <div class="container-fluid my-5">
 
         <!--Section: Content-->
         <section class="features" id="features">
