implementing tpc.html view

--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
 
           <!--Grid column-->
           <div class="col-md-4">
-            <p class="mb-0 text-center"><strong>The FUN of make games.</strong></p>
+            <p class="mb-0 text-center">
+            <h2><strong>The FUN of make games.</strong></h2>
+            </p>
           </div>
           <!--Grid column-->
 
