implementing tpc.html view

--- a/frontend/games/tpc.html
+++ b/frontend/games/tpc.html
@@ -241,6 +241,14 @@
                         <div class="carousel-item active">
                           <div class="col-12 col-md-6 mb-4 mx-auto">
                             <div class="view overlay view rounded z-depth-1-half">
+                              <img src="/img/icon-game/tpc-icon.jpg" class="img-fluid rounded" alt="tpc-icon">
+                              <div class="mask rgba-white-slight"></div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="carousel-item">
+                          <div class="col-12 col-md-6 mb-4 mx-auto">
+                            <div class="view overlay view rounded z-depth-1-half">
                               <img src="/img/game-gallery/tpc-screen-pets.jpg" class="img-fluid rounded" alt="screen-pets">
                               <div class="mask rgba-white-slight"></div>
                             </div>
