implementing tpc.html view

--- a/frontend/games/inkuneko_ar.html
+++ b/frontend/games/inkuneko_ar.html
@@ -319,7 +319,7 @@
                       <!--Video-->
                       <div class="screen">
                         <video class="video-fluid z-depth-1" autoplay loop controls muted>
-                          <source src="/video/tpc.webm" type="video/webm" />
+                          <source src="/video/inkuneko.webm" type="video/webm" />
                         </video>
                       </div>
                     </div>
