implementing tpc.html view

--- a/frontend/games/inkuneko_ar.html
+++ b/frontend/games/inkuneko_ar.html
@@ -170,7 +170,7 @@
               <!--Device column-->
               <div class="col-md-6 p-2">
                 <div class="device-container">
-                  <div class="device-mockup iphone6_plus portrait gold">
+                  <div class="device-mockup iphone6_plus portrait black-case">
                     <div class="device">
                       <!--Image-->
                       <div class=" view overlay screen">
