implementing tpc.html view

--- a/frontend/games/eduland_ar.html
+++ b/frontend/games/eduland_ar.html
@@ -317,7 +317,7 @@
                       <!--Image-->
                       <div class="screen">
                         <img src="/img/game-gallery/eduland-screen.jpg" class="img-fluid" alt="eduland-screen">
-                        <div class="mask rgba-white-light"></div>
+                        <div class="mask rgba-white-slight"></div>
                       </div>
                     </div>
                   </div>
