--- a/frontend/games/eduland_ar.html
+++ b/frontend/games/eduland_ar.html
@@ -205,7 +205,7 @@
 
                   <li>
                     <p class="text-uppercase mb-2 text-dark"><strong>Release</strong></p>
-                    <p class="mb-4 dark-grey-text">December 5, 2019</p>
+                    <p class="mb-4 dark-grey-text">N/A</p>
                   </li>
 
                   <li>
