implementing tpc.html view

--- a/frontend/games/eduland_ar.html
+++ b/frontend/games/eduland_ar.html
@@ -315,7 +315,7 @@
                   <div class="device-mockup iphone6_plus portrait gold">
                     <div class="device">
                       <!--Image-->
-                      <div class="screen">
+                      <div class=" view overlay screen">
                         <img src="/img/game-gallery/eduland-screen.jpg" class="img-fluid" alt="eduland-screen">
                         <div class="mask rgba-white-slight"></div>
                       </div>
