implementing quimiuami.html view

--- a/frontend/games/quimiuami.html
+++ b/frontend/games/quimiuami.html
@@ -218,7 +218,7 @@
 
                   <li>
                     <p class="text-uppercase mb-2 text-dark"><strong>Platform(s)</strong></p>
-                    <p class="mb-4 dark-grey-text">Android</p>
+                    <p class="mb-4 dark-grey-text">Android, IOs</p>
                   </li>
 
                   <li>
