implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -168,18 +168,18 @@
             <!--Grid row-->
             <div class="row">
               <!--Device column-->
-              <div class="col-md-6 p-2">
+              <div class="col-md-8 p-2">
                 <div class="device-container">
                   <div class="device-mockup macbook_2015 silver">
                     <div class="device">
                       <!--Image-->
                       <div class=" view overlay screen">
                         <!--Carousel slide-->
-                        <div id="carousel-multi" class="carousel slide carousel-fade carousel-multi-item v-2" data-ride="carousel">
+                        <div id="carousel-multi" class="carousel-fade carousel-multi-item v-2" data-ride="carousel">
                           <!--Images-->
                           <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active">
-                              <div class="col-12 col-md-12 mb-4 mx-auto">
+                              <div class="col-12 col-md-12 mx-auto">
                                 <div class="view overlay view rounded z-depth-1-half">
                                   <img src="/img/game-gallery/uamivr-screen-1.jpg" class="d-block w-100 img-fluid rounded" alt="uamivr-1">
                                   <div class="mask rgba-white-slight"></div>
@@ -222,7 +222,7 @@
               <!--Device column-->
 
               <!--Game detail column-->
-              <div class="col-md-6 p-5 align-self-centers">
+              <div class="col-md-4 p-5 align-self-centers">
 
                 <h5 class="font-weight-normal mb-3 text-dark"><strong>UAM-I VR</strong></h5>
 
@@ -273,7 +273,7 @@
               <div class="col-md-12 p-5">
 
                 <!--Device video column-->
-                <div class="col-md-6 p-2">
+                <div class="col-md-12 p-2">
                   <div class="device-container">
                     <div class="device-mockup macbook_2015 silver">
                       <div class="device">
