--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -179,8 +179,8 @@
                           <!--Images-->
                           <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active">
-                              <div class="col-12 col-md-12 mx-auto">
-                                <div class="view overlay view rounded z-depth-1-half">
+                              <div class="col-12 col-md-12">
+                                <div class="view overlay z-depth-1-half">
                                   <img src="/img/game-gallery/uamivr-screen-1.jpg" class="d-block w-100 img-fluid rounded" alt="uamivr-1">
                                   <div class="mask rgba-white-slight"></div>
                                 </div>
