--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -168,7 +168,7 @@
             <!--Grid row-->
             <div class="row">
               <!--Device column-->
-              <div class="col-md-8 p-2">
+              <div class="col-md-8">
                 <div class="device-container">
                   <div class="device-mockup macbook_2015 silver">
                     <div class="device">
