implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -168,7 +168,7 @@
             <!--Grid row-->
             <div class="row">
               <!--Device column-->
-              <div class="col-md-8">
+              <div class="col-md-8 p-5">
                 <div class="device-container">
                   <div class="device-mockup macbook_2015 silver">
                     <div class="device">
@@ -179,7 +179,7 @@
                           <!--Images-->
                           <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active">
-                              <div class="col-12 col-md-12">
+                              <div class="col-12 col-lg-12">
                                 <div class="view overlay z-depth-1-half">
                                   <img src="/img/game-gallery/uamivr-screen-1.jpg" class="img-fluid" alt="uamivr-1">
                                   <div class="mask rgba-white-slight"></div>
