--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -175,43 +175,26 @@
                       <!--Image-->
                       <div class=" view overlay screen">
                         <!--Carousel slide-->
-                        <div id="carousel-multi" class="carousel-fade carousel-multi-item v-2" data-ride="carousel">
-                          <!--Images-->
-                          <div class="carousel-inner" role="listbox">
+                        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                          <div class="carousel-inner">
                             <div class="carousel-item active">
-                              <div class="col-12 col-lg-12">
-                                <div class="view overlay z-depth-1-half">
-                                  <img src="/img/game-gallery/uamivr-screen-1.jpg" class="img-fluid" alt="uamivr-1">
-                                  <div class="mask rgba-white-slight"></div>
-                                </div>
-                              </div>
+                              <img class="d-block w-100" src="/img/game-gallery/uamivr-screen-1" alt="First slide">
                             </div>
                             <div class="carousel-item">
-                              <div class="col-12 col-md-12 mb-4 mx-auto">
-                                <div class="view overlay view rounded z-depth-1-half">
-                                  <img src="/img/game-gallery/uamivr-screen-2.jpg" class="d-block w-100 img-fluid rounded" alt="uamivr-2">
-                                  <div class="mask rgba-white-slight"></div>
-                                </div>
-                              </div>
+                              <img class="d-block w-100" src="/img/game-gallery/uamivr-screen-2" alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                              <div class="col-12 col-md-12 mb-4 mx-auto">
-                                <div class="view overlay view rounded z-depth-1-half">
-                                  <img src="/img/game-gallery/uamivr-screen-3.jpg" class="d-block w-100 img-fluid rounded" alt="uamivr-3">
-                                  <div class="mask rgba-white-slight"></div>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="carousel-item">
-                              <div class="col-12 col-md-12 mb-4 mx-auto">
-                                <div class="view overlay view rounded z-depth-1-half">
-                                  <img src="/img/game-gallery/uamivr-screen-4.jpg" class="d-block w-100 img-fluid rounded" alt="uamivr-4">
-                                  <div class="mask rgba-white-slight"></div>
-                                </div>
-                              </div>
+                              <img class="d-block w-100" src="/img/game-gallery/uamivr-screen-3" alt="Third slide">
                             </div>
                           </div>
-                          <!--Images-->
+                          <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                          </a>
+                          <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                          </a>
                         </div>
                         <!--Carousel slide-->
                       </div>
