--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -178,13 +178,13 @@
                         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                           <div class="carousel-inner">
                             <div class="carousel-item active">
-                              <img class="d-block w-100" src="/img/game-gallery/uamivr-screen-1" alt="First slide">
+                              <img class="d-block w-100" src="/img/game-gallery/uamivr-screen-1.jpg" alt="First slide">
                             </div>
                             <div class="carousel-item">
-                              <img class="d-block w-100" src="/img/game-gallery/uamivr-screen-2" alt="Second slide">
+                              <img class="d-block w-100" src="/img/game-gallery/uamivr-screen-2.jpg" alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                              <img class="d-block w-100" src="/img/game-gallery/uamivr-screen-3" alt="Third slide">
+                              <img class="d-block w-100" src="/img/game-gallery/uamivr-screen-3.jpg" alt="Third slide">
                             </div>
                           </div>
                           <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
