--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -250,7 +250,7 @@
 
 
             <!-- Grid row -->
-            <div class="row d-flex justify-content-center">
+            <div class="row align-items-center">
 
               <!-- Grid column -->
               <div class="col-md-12 p-5">
