implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -23,7 +23,7 @@
   <!-- Material Design Bootstrap -->
   <link rel="stylesheet" href="/css/mdb.min.css">
   <!-- Plugin CSS -->
-  <link rel="stylesheet" href="/device-mockups/device-mockups.min.css">
+  <link rel="stylesheet" href="/device-mockups/device-mockups.css">
   <!-- Custom styles -->
   <link rel="stylesheet" href="/css/style.css">
 </head>
