implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -168,7 +168,7 @@
             <!--Grid row-->
             <div class="row">
               <!--Device column-->
-              <div class="col-md-8 p-5">
+              <div class="col-md-7 p-5">
                 <div class="device-container">
                   <div class="device-mockup macbook_2015 silver">
                     <div class="device">
@@ -205,7 +205,7 @@
               <!--Device column-->
 
               <!--Game detail column-->
-              <div class="col-md-4 p-5 align-self-centers">
+              <div class="col-md-5 p-5 align-self-centers">
 
                 <h5 class="font-weight-normal mb-3 text-dark"><strong>UAM-I VR</strong></h5>
 
@@ -253,10 +253,10 @@
             <div class="row align-items-center">
 
               <!-- Grid column -->
-              <div class="col-md-12 p-5">
+              <div class="col-md-12">
 
                 <!--Device video column-->
-                <div class="col-md-12 p-2">
+                <div class="col-md-12">
                   <div class="device-container">
                     <div class="device-mockup macbook_2015 silver">
                       <div class="device">
