--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -168,7 +168,7 @@
             <!--Grid row-->
             <div class="row">
               <!--Device column-->
-              <div class="col-md-7 p-5">
+              <div class="col-md-7 pt-5">
                 <div class="device-container">
                   <div class="device-mockup macbook_2015 silver">
                     <div class="device">
@@ -253,7 +253,7 @@
             <div class="row align-items-center">
 
               <!-- Grid column -->
-              <div class="col-md-12">
+              <div class="col-md-12 p-5">
 
                 <!--Device video column-->
                 <div class="col-md-12">
