implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -250,18 +250,18 @@
 
 
             <!-- Grid row -->
-            <div class="row align-items-center">
+            <div class="row align-items-center danger-color">
 
               <!-- Grid column -->
-              <div class="col-md-12 p-5">
+              <div class="col-md-12 p-5 warning-color">
 
                 <!--Device video column-->
-                <div class="col-md-12">
-                  <div class="device-container">
-                    <div class="device-mockup macbook_2015 silver">
-                      <div class="device">
+                <div class="col-md-12 success-color">
+                  <div class="device-container info-color">
+                    <div class="device-mockup macbook_2015 silver secondary-color">
+                      <div class="device  pink lighten-1">
                         <!--Video-->
-                        <div class="screen">
+                        <div class="screen orange darken-2">
                           <video class="video-fluid z-depth-1" autoplay loop controls muted>
                             <source src="/video/tpc.webm" type="video/webm" />
                           </video>
