--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -258,7 +258,7 @@
                 <!--Device video column-->
                 <div class="col-md-12">
                   <div class="device-container info-color">
-                    <div class="device-mockup p-0 macbook_2015 silver secondary-color">
+                    <div class="device-mockup macbook_2015 silver secondary-color">
                       <div class="device p-0 pink lighten-1">
                         <!--Video-->
                         <div class="screen orange darken-2">
