implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -259,9 +259,9 @@
                 <div class="col-md-6">
                   <div class="device-container info-color">
                     <div class="device-mockup macbook_2015 silver secondary-color">
-                      <div class="device pink lighten-1">
+                      <div class="device">
                         <!--Video-->
-                        <div class="screen orange darken-2">
+                        <div class="screen">
                           <video class="video-fluid z-depth-1" autoplay loop controls muted>
                             <source src="/video/tpc.webm" type="video/webm" />
                           </video>
