implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -258,7 +258,7 @@
                 <!--Device video column-->
                 <div class="col-md-6">
                   <div class="device-container info-color">
-                    <div class="device-mockup macbook_2015 silver secondary-color">
+                    <div class="device-mockup macbook_2015 silver">
                       <div class="device">
                         <!--Video-->
                         <div class="screen">
