--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -256,7 +256,7 @@
               <div class="col-md-12 p-5">
 
                 <!--Device video column-->
-                <div class="col-md-6">
+                <div class="col-md-6 text-center">
                   <div class="device-container info-color">
                     <div class="device-mockup macbook_2015 silver">
                       <div class="device">
