--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -250,14 +250,14 @@
 
 
             <!-- Grid row -->
-            <div class="row justify-content-md-center">
+            <div class="row d-flex justify-content-center">
 
               <!-- Grid column -->
               <div class="col-md-12 p-5">
 
                 <!--Device video column-->
-                <div class="col-md-6 text-center">
-                  <div class="device-container info-color">
+                <div class="col-md-12 text-center">
+                  <div class="device-container">
                     <div class="device-mockup macbook_2015 silver">
                       <div class="device">
                         <!--Video-->
