implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -257,7 +257,7 @@
 
                 <!--Device video column-->
                 <div class="col-md-12 text-center">
-                  <div class="device-container">
+                  <div class="device-container text-center">
                     <div class="device-mockup macbook_2015 silver">
                       <div class="device">
                         <!--Video-->
