--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -257,8 +257,8 @@
 
                 <!--Device video column-->
                 <div class="col-md-12">
-                  <div class="device-container text-center">
-                    <div class="device-mockup macbook_2015 silver">
+                  <div class="device-container">
+                    <div class="device-mockup macbook_2015 silver text-center">
                       <div class="device">
                         <!--Video-->
                         <div class="screen">
