implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -258,7 +258,7 @@
                 <!--Device video column-->
                 <div class="col-md-12">
                   <div class="device-container">
-                    <div class="device-mockup macbook_2015 silver text-center">
+                    <div class="device-mockup iphone6_plus landscape black-case text-center">
                       <div class="device">
                         <!--Video-->
                         <div class="screen">
