--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -261,11 +261,7 @@
                     <div class="device-mockup macbook_2015 portrait silver text-center">
                       <div class="device">
                         <!--Video-->
-                        <div class="screen">
-                          <video class="video-fluid z-depth-1" autoplay loop controls muted>
-                            <source src="/video/tpc.webm" type="video/webm" />
-                          </video>
-                        </div>
+                        <img src="/device-mockups/mackbook_2015/silver.png" class="img-fluid" alt="...">
                       </div>
                     </div>
                   </div>
