implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -257,17 +257,25 @@
 
                 <!--Device video column-->
                 <div class="col-md-12">
-
-                  <!--Video-->
-                  <img src="/device-mockups/macbook_2015/silver.png" class="img-fluid" alt="...">
+                  <div class="device-container">
+                    <div class="device-mockup macbook_2015 portrait silver text-center">
+                      <div class="device">
+                        <!--Video-->
+                        <div class="screen">
+                          <video class="video-fluid z-depth-1" autoplay loop controls muted>
+                            <source src="/video/tpc.webm" type="video/webm" />
+                          </video>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-              </div>
-              <!--Device video column-->
+                <!--Device video column-->
 
+              </div>
+              <!-- Grid row -->
             </div>
-            <!-- Grid row -->
-          </div>
-          <!--Card-->
+            <!--Card-->
         </section>
         <!--Section: Content-->
       </div>
