--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -257,18 +257,7 @@
 
                 <!--Device video column-->
                 <div class="col-md-12">
-                  <div class="device-container">
-                    <div class="device-mockup macbook_2015 silver text-center">
-                      <div class="device">
-                        <!--Video-->
-                        <div class="screen">
-                          <video class="video-fluid z-depth-1" autoplay loop controls muted>
-                            <source src="/video/tpc.webm" type="video/webm" />
-                          </video>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                  <img src="/device-mockups/macbook_2015/silver.png" class="img-fluid" alt="macbook_2015">
                 </div>
                 <!--Device video column-->
 
