--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -257,14 +257,25 @@
 
                 <!--Device video column-->
                 <div class="col-md-12">
-                  <img src="/device-mockups/macbook_2015/silver.png" class="img-fluid" alt="macbook_2015">
+                  <div class="device-container">
+                    <div class="device-mockup macbook_2015 silver text-center">
+                      <div class="device">
+                        <!--Video-->
+                        <div class="screen">
+                          <video class="video-fluid z-depth-1" autoplay loop controls muted>
+                            <source src="/video/tpc.webm" type="video/webm" />
+                          </video>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <!--Device video column-->
-
               </div>
-              <!-- Grid row -->
             </div>
-            <!--Card-->
+            <!-- Grid row -->
+          </div>
+          <!--Card-->
         </section>
         <!--Section: Content-->
       </div>
