implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -257,13 +257,15 @@
 
                 <!--Device video column-->
                 <div class="col-md-12">
-                  <div class="device-mockup macbook_2015 silver text-center">
-                    <div class="device">
-                      <!--Video-->
-                      <div class="screen">
-                        <video class="video-fluid z-depth-1" autoplay loop controls muted>
-                          <source src="/video/tpc.webm" type="video/webm" />
-                        </video>
+                  <div class="device-container">
+                    <div class="device-mockup ipad_pro landscape">
+                      <div class="device">
+                        <!--Video-->
+                        <div class="screen">
+                          <video class="video-fluid z-depth-1" autoplay loop controls muted>
+                            <source src="/video/tpc.webm" type="video/webm" />
+                          </video>
+                        </div>
                       </div>
                     </div>
                   </div>
