implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -256,9 +256,9 @@
               <div class="col-md-12 p-5">
 
                 <!--Device video column-->
-                <div class="col-md-12">
+                <div class="col-md-8 text-center">
 
-                  <div class="device-mockup ipad_pro landscape">
+                  <div class="device-mockup macbook_2015 silver">
                     <div class="device">
                       <!--Video-->
                       <div class="screen">
