--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -253,23 +253,23 @@
             <div class="row d-flex justify-content-center">
 
               <!-- Grid column -->
-              <div class="col-md-12 p-5">
+              <div class="col-md-8 p-5 text-center">
 
                 <!--Device video column-->
-                <div class="col-md-12 text-center">
 
-                  <div class="device-mockup macbook_2015 silver">
-                    <div class="device">
-                      <!--Video-->
-                      <div class="screen">
-                        <video class="video-fluid z-depth-1" autoplay loop controls muted>
-                          <source src="/video/tpc.webm" type="video/webm" />
-                        </video>
-                      </div>
+
+                <div class="device-mockup macbook_2015 silver">
+                  <div class="device">
+                    <!--Video-->
+                    <div class="screen">
+                      <video class="video-fluid z-depth-1" autoplay loop controls muted>
+                        <source src="/video/tpc.webm" type="video/webm" />
+                      </video>
                     </div>
                   </div>
-
                 </div>
+
+
                 <!--Device video column-->
               </div>
             </div>
