implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -253,7 +253,7 @@
             <div class="row d-flex justify-content-center">
 
               <!-- Grid column -->
-              <div class="col-md-8 p-5 text-center">
+              <div class="col-md-10 p-5">
 
                 <!--Device video column-->
 
