--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -166,38 +166,36 @@
           <div class="card mb-4">
 
             <!--Grid row-->
-            <div class="row">
+            <div class="row d-flex justify-content-center">
               <!--Device column-->
               <div class="col-md-7 pt-5">
-                <div class="device-container">
-                  <div class="device-mockup macbook_2015 silver">
-                    <div class="device">
-                      <!--Image-->
-                      <div class=" view overlay screen">
-                        <!--Carousel slide-->
-                        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-                          <div class="carousel-inner">
-                            <div class="carousel-item active">
-                              <img class="d-block w-100 img-fluid" src="/img/game-gallery/uamivr-screen-1.jpg" alt="First slide">
-                            </div>
-                            <div class="carousel-item">
-                              <img class="d-block w-100 img-fluid" src="/img/game-gallery/uamivr-screen-2.jpg" alt="Second slide">
-                            </div>
-                            <div class="carousel-item">
-                              <img class="d-block w-100 img-fluid" src="/img/game-gallery/uamivr-screen-3.jpg" alt="Third slide">
-                            </div>
+                <div class="device-mockup macbook_2015 silver">
+                  <div class="device">
+                    <!--Image-->
+                    <div class=" view overlay screen">
+                      <!--Carousel slide-->
+                      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img class="d-block w-100 img-fluid" src="/img/game-gallery/uamivr-screen-1.jpg" alt="First slide">
                           </div>
-                          <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                          </a>
-                          <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                          </a>
+                          <div class="carousel-item">
+                            <img class="d-block w-100 img-fluid" src="/img/game-gallery/uamivr-screen-2.jpg" alt="Second slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100 img-fluid" src="/img/game-gallery/uamivr-screen-3.jpg" alt="Third slide">
+                          </div>
                         </div>
-                        <!--Carousel slide-->
+                        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
                       </div>
+                      <!--Carousel slide-->
                     </div>
                   </div>
                 </div>
@@ -247,17 +245,12 @@
             </div>
             <!--Grid row-->
 
-
-
             <!-- Grid row -->
             <div class="row d-flex justify-content-center">
 
               <!-- Grid column -->
               <div class="col-md-10 p-5">
-
-                <!--Device video column-->
-
-
+                <!-- Device mockup -->
                 <div class="device-mockup macbook_2015 silver">
                   <div class="device">
                     <!--Video-->
@@ -266,11 +259,10 @@
                         <source src="/video/tpc.webm" type="video/webm" />
                       </video>
                     </div>
+                    <!--Video-->
                   </div>
                 </div>
-
-
-                <!--Device video column-->
+                <!-- Device mockup -->
               </div>
             </div>
             <!-- Grid row -->
