--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -169,7 +169,7 @@
             <div class="row d-flex justify-content-center">
               <!--Device column-->
               <div class="col-md-6 pt-5">
-                <div class="device-mockup macbook_2015 silver">
+                <div class="device-mockup ipad_pro portrait gold">
                   <div class="device">
                     <!--Image-->
                     <div class=" view overlay screen">
