implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -23,7 +23,7 @@
   <!-- Material Design Bootstrap -->
   <link rel="stylesheet" href="/css/mdb.min.css">
   <!-- Plugin CSS -->
-  <link rel="stylesheet" href="/device-mockups/device-mockups.css">
+  <link rel="stylesheet" href="/device-mockups/device-mockups.min.css">
   <!-- Custom styles -->
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -245,6 +245,17 @@
             </div>
             <!--Grid row-->
 
+            <!--Grid row-->
+            <div class="row d-flex justify-content-center">
+              <div class="col-md-12 p-3">
+                <h2 class="h2 mb-4 text-dark">You can try the current virtual tour</h2>
+                <p class="mb-4 dark-grey-text">Enjoy this virtual reality UAM-I that is still in development,
+                  if you are interested in this type of project we can also develop it for you,
+                  do not hesitate to contact us</p>
+              </div>
+            </div>
+            <!--Grid row-->
+
             <!-- Grid row -->
             <div class="row d-flex justify-content-center">
 
@@ -253,13 +264,13 @@
                 <!-- Device mockup -->
                 <div class="device-mockup macbook_2015 silver">
                   <div class="device">
-                    <!--Video-->
+                    <!--UAMI-VR Game-->
                     <div class="screen">
                       <video class="video-fluid z-depth-1" autoplay loop controls muted>
                         <source src="/video/tpc.webm" type="video/webm" />
                       </video>
                     </div>
-                    <!--Video-->
+                    <!--UAMI-VR Game-->
                   </div>
                 </div>
                 <!-- Device mockup -->
