--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -247,12 +247,36 @@
 
             <!--Grid row-->
             <div class="row d-flex justify-content-center">
-              <div class="col-md-12 p-3">
+              <!--Grid column-->
+              <div class="col-md-6 p-3">
                 <h2 class="h2 mb-4 text-dark">You can try the current virtual tour</h2>
                 <p class="mb-4 dark-grey-text">Enjoy this virtual reality UAM-I that is still in development,
                   if you are interested in this type of project we can also develop it for you,
                   do not hesitate to contact us</p>
               </div>
+              <!--Grid column-->
+
+              <!--Grid column-->
+              <div class="col-md-6 p-3">
+                <h2 class="h2 mb-4 text-dark pb-2 pt-5">Stay Updated</h3>
+                  <p class="mb-4 dark-grey-text pt-2">Subscribe to our newsletter to be always aware of our new updates.</p>
+
+                  <h2 class="h2 mb-4 text-dark pb-2 pt-5">Stay Updated</h3>
+                    <p class="mb-4 dark-grey-text pt-2">Subscribe to our newsletter to be always aware of our new updates.</p>
+
+                    <!--Form newsletter-->
+                    <form class="col-md-9 input-grey pl-0" action="" method="post" target="_blank">
+                      <div class="input-group mb-3">
+                        <input type="text" class="form-control dark-grey-text border-0 z-depth-0" placeholder="Enter Email Address" aria-label="Enter Email Address" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-md cyan darken-2 m-0 px-3 py-2 z-depth-0 rounded-right" type="button" id="button-addon2">Sign up<i class="fas fa-arrow-right pl-2"></i></button>
+                        </div>
+                      </div>
+                    </form>
+                    <!--Form newsletter-->
+
+              </div>
+              <!--Grid column-->
             </div>
             <!--Grid row-->
 
