implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -257,7 +257,7 @@
               <!--Grid column-->
 
               <!--Grid column-->
-              <div class="col-md-6 p-2">
+              <div class="col-md-6">
 
                 <h2 class="h2 mb-4 text-dark pb-2 pt-5">Stay Updated</h3>
                   <p class="mb-4 dark-grey-text pt-2">Subscribe to our newsletter to be always aware of our new updates.</p>
