--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -246,9 +246,9 @@
             <!--Grid row-->
 
             <!--Grid row-->
-            <div class="row d-flex justify-content-center">
+            <div class="row d-flex justify-content-center p-5">
               <!--Grid column-->
-              <div class="col-md-6 p-5">
+              <div class="col-md-6">
                 <h2 class="h2 mb-4 text-dark">You can try the current virtual tour</h2>
                 <p class="mb-4 dark-grey-text">Enjoy this virtual reality UAM-I that is still in development,
                   if you are interested in this type of project we can also develop it for you,
