implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -248,7 +248,7 @@
             <!--Grid row-->
             <div class="row d-flex justify-content-center">
               <!--Grid column-->
-              <div class="col-md-6 p-3">
+              <div class="col-md-6 p-5">
                 <h2 class="h2 mb-4 text-dark">You can try the current virtual tour</h2>
                 <p class="mb-4 dark-grey-text">Enjoy this virtual reality UAM-I that is still in development,
                   if you are interested in this type of project we can also develop it for you,
@@ -257,10 +257,10 @@
               <!--Grid column-->
 
               <!--Grid column-->
-              <div class="col-md-6 p-3">
+              <div class="col-md-6 p-5">
 
-                <h2 class="h2 mb-4 text-dark pb-2">Stay Updated</h3>
-                  <p class="mb-4 dark-grey-text pt-2">Subscribe to our newsletter to be always aware of our new updates.</p>
+                <h2 class="h2 mb-4 text-dark">Stay Updated</h3>
+                  <p class="mb-4 dark-grey-text">Subscribe to our newsletter to be always aware of our new updates.</p>
 
                   <!--Form newsletter-->
                   <form class="col-md-9 input-grey pl-0" action="" method="post" target="_blank">
